--- a/sollutions.css
+++ b/sollutions.css
@@ -20,11 +20,16 @@ Esercizio 2
     width: 100%;
 }
 
-
 /*--------------- 
 Esercizio 3
 -----------------*/
 
+.ex-3-square {
+    transition: 4s;
+}
+.ex-3-square:hover {
+    border-radius: 50%;
+}
 
 /*--------------- 
 Esercizio 4
