--- a/sollutions.css
+++ b/sollutions.css
@@ -128,6 +128,20 @@ Esercizio  10
 Esercizio 11
 -----------------*/
 
+.ex-11-icon:hover {
+    animation: girainverso 2s infinite;
+}
+@keyframes girainverso {
+    0% {
+        transform: rotate(0);
+    }
+    50% {
+        transform: rotate(275deg);
+    }
+    100% {
+        transform: rotate(0);
+    }
+}
 
 /*--------------- 
 Esercizio 12
